--- a/source/static/styles.css
+++ b/source/static/styles.css
@@ -112,6 +112,35 @@ body {
 	box-shadow: 0px 0px 20px rba(255, 255, 255, 0.4);
 }
 
+/* START SECTIONS */
+.start-section {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 200px;
+	background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url("img/bg.jpg");
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+.start-section h1 {
+	font-size: 30px;
+	color: white;
+	font-weight: bold;
+	margin: 0;
+}
+
+.start-section p {
+	font-size: 15px;
+	color: white;
+	font-weight: bold;
+	margin: 20px 0;
+}
+
+
 /* LOGIN PAGE */
 .site-background {
 	display: flex;
