Added CSS to the profile page content

--- a/source/static/styles.css
+++ b/source/static/styles.css
@@ -132,6 +132,13 @@ input {
 	background-color: red;
 }
 
+/* PROFILE CONTENT */
+.profile-content {
+	display: absolute;
+	padding-left: 7px;
+	padding-top: 60px;
+}
+
 /* SPLASH SCREEN */
 .start-page {
 	display: flex;
