--- a/source/static/styles.css
+++ b/source/static/styles.css
@@ -139,6 +139,33 @@ input {
 	padding-top: 55px;
 }
 
+#profile-dropdown {
+	display: inline-block;
+}
+
+#profile-dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: white;
+	min-width: 160px;
+	box-shadow: 0px 1px 7px black;
+	z-index: 2;
+	margin-left: -120px;
+}
+
+/* Show dropdown menu content on hover */
+#profile-dropdown:hover #profile-dropdown-content {
+	display: block;
+}
+
+#profile-dropdown-content a {
+	color: black;
+	padding: 10px 12px;
+	display: block;
+	text-align: left;
+	text-decoration: none;
+}
+
 /* SPLASH SCREEN */
 .start-page {
 	display: flex;
